--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 node_modules
-.angular/cache/13.2.4
+.angular
+angular.json
+karma.conf.js
+package-lock.json
+package.json
+src
+tsconfig.app.json
+tsconfig.app
+tsconfig.spec.json
